# 354-ResearchProjectDataVisualization

./: .gitignore  app.py  calculate_correlations.py  psc_354_research_project_fileparser_vdem_and_kof.py  pyproject.toml  readme.md  time_lag_analysis.py
assets/: style.css
data/: KOFGI_2024_public.xlsx  correlation_coefficients.txt  democracy_trade_analysis.xlsx  missing_countries.txt  time_lag_analysis.txt
documented_code/: dash_app.py  parser_documented.py
